file(GLOB SRC_Fortran_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)
file(GLOB SRC_CPLUSPLUS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(${PROJECT_NAME} ${SRC_Fortran_FILES} ${SRC_CPLUSPLUS_FILES})
target_link_libraries(${PROJECT_NAME} ${ROOT_LIBRARIES} stdc++ gfortran)

install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/bin)
